Switch to using API versus random calls to random classes. Added HungerDamage and SaturationUtil methods to API
Removed ability for mobs to damage foodstats temporarily